examples/LINUX/tests/errors/function-undefined.biplan
// Function is undefined.
// The compiler should notice it and return an error.

undefinedFun()

stop